Added documentation for statistics components.